fix: add mediaqueries

--- a/sigaus-tool/src/styles.scss
+++ b/sigaus-tool/src/styles.scss
@@ -89,3 +89,26 @@ body {
 .mt-3 {
   margin-top: 1rem;
 }
+
+// @media (min-width: 1200px) {
+//   .main-content {
+//       max-width: 1366px;
+//       width: 100%;
+//   }
+// }
+
+// @media (min-width: 1200px) {
+//   .main-content {
+//       width: 1170px;
+//   }
+// }
+// @media (min-width: 992px) {
+//   .main-content {
+//       width: 970px;
+//   }
+// }
+// @media (min-width: 768px) {
+//   .main-content {
+//       width: 750px;
+//   }
+// }
