--- a/sigaus-tool/src/app/pages/declarations/declarations.component.scss
+++ b/sigaus-tool/src/app/pages/declarations/declarations.component.scss
@@ -1,5 +1,6 @@
 .declaraciones {
-  padding: 15px 20px;
+  padding: 15px 0; // Reduced padding to match screenshot
+  width: 100%;
   
   // Breadcrumb
   &__breadcrumb {
