--- a/sigaus-tool/src/app/shared/data-table/data-table.component.html
+++ b/sigaus-tool/src/app/shared/data-table/data-table.component.html
@@ -24,31 +24,33 @@
     <!-- Table -->
     <p-table 
       [value]="data" 
+      [(selection)]="selectedDeclarations"
+      dataKey="id"
       [paginator]="true" 
       [rows]="10" 
       [rowHover]="true"
       styleClass="data-table__table">
       <ng-template pTemplate="header">
         <tr>
-          <th style="width: 3rem">
-            <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+          <th style="width: 4rem">
+            <p-tableHeaderCheckbox />
           </th>
-          <th pSortableColumn="referencia">N° REFERENCIA <p-sortIcon field="referencia"></p-sortIcon></th>
-          <th pSortableColumn="tipo">TIPO <p-sortIcon field="tipo"></p-sortIcon></th>
-          <th pSortableColumn="fecha">FECHA <p-sortIcon field="fecha"></p-sortIcon></th>
-          <th pSortableColumn="origen">ORIGEN (PROVINCIA) <p-sortIcon field="origen"></p-sortIcon></th>
+          <th pSortableColumn="reference">N° REFERENCIA <p-sortIcon field="reference"></p-sortIcon></th>
+          <th pSortableColumn="type">TIPO <p-sortIcon field="type"></p-sortIcon></th>
+          <th pSortableColumn="date">FECHA <p-sortIcon field="date"></p-sortIcon></th>
+          <th pSortableColumn="origin">ORIGEN (PROVINCIA) <p-sortIcon field="origin"></p-sortIcon></th>
           <th pSortableColumn="regenerable">REGENERABLE <p-sortIcon field="regenerable"></p-sortIcon></th>
           <th pSortableColumn="ler">LER <p-sortIcon field="ler"></p-sortIcon></th>
-          <th pSortableColumn="cantidad">CANTIDAD <p-sortIcon field="cantidad"></p-sortIcon></th>
-          <th pSortableColumn="oleado">N° OLEADO <p-sortIcon field="oleado"></p-sortIcon></th>
-          <th pSortableColumn="pdfVinc">PDF VINC. <p-sortIcon field="pdfVinc"></p-sortIcon></th>
+          <th pSortableColumn="quantity">CANTIDAD <p-sortIcon field="quantity"></p-sortIcon></th>
+          <th pSortableColumn="oleoso">N° OLEADO <p-sortIcon field="oleoso"></p-sortIcon></th>
+          <th>PDF VINC.</th>
           <th>INCIDENCIAS</th>
           <th>ACCIONES</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-item>
         <tr>
-          <td><p-tableCheckbox [value]="item"></p-tableCheckbox></td>
+          <td><p-tableCheckbox [value]="item" /></td>
           <td>{{ item.reference }}</td>
           <td>
             <span class="data-table__badge" [ngClass]="'data-table__badge--' + item.type">
@@ -59,7 +61,7 @@
           <td>{{ item.origin }}</td>
           <td>{{ item.regenerable }}</td>
           <td>{{ item.ler }}</td>
-          <td>{{ item.quantity }}</td>
+          <td>{{ item.quantity }} kg</td>
           <td>{{ item.oleoso }}</td>
           <td class="data-table__center-cell">
             <span class="material-icons" *ngIf="item.pdf">picture_as_pdf</span>
