--- a/sigaus-tool/src/app/app.component.scss
+++ b/sigaus-tool/src/app/app.component.scss
@@ -1,10 +1,13 @@
 .app-container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  
-  .main-content {
-    flex: 1;
-    background-color: #f9f9f9;
-  }
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main-content {
+  flex: 1;
+  background-color: #f9f9f9;
+  display: flex;
+  justify-content: center;
+  margin: 0 10rem;
+}
