--- a/sigaus-tool/src/styles.scss
+++ b/sigaus-tool/src/styles.scss
@@ -1,6 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import "primeicons/primeicons.css";
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
@@ -90,25 +89,63 @@ body {
   margin-top: 1rem;
 }
 
-// @media (min-width: 1200px) {
-//   .main-content {
-//       max-width: 1366px;
-//       width: 100%;
-//   }
-// }
+/* PrimeNG overrides */
+.p-component {
+  font-family: 'Roboto', sans-serif;
+}
 
-// @media (min-width: 1200px) {
-//   .main-content {
-//       width: 1170px;
-//   }
-// }
-// @media (min-width: 992px) {
-//   .main-content {
-//       width: 970px;
-//   }
-// }
-// @media (min-width: 768px) {
-//   .main-content {
-//       width: 750px;
-//   }
-// }
+.p-button.p-button-primary {
+  background-color: var(--primary-color);
+  border-color: var(--primary-color);
+}
+
+.p-dropdown {
+  border-radius: 4px;
+}
+
+.p-dropdown-panel {
+  border-radius: 4px;
+}
+
+.p-dropdown-items-wrapper {
+  max-height: 200px;
+}
+
+.p-paginator {
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+}
+
+.p-datatable .p-datatable-header,
+.p-datatable .p-datatable-footer {
+  background-color: #ffffff;
+  border: 1px solid #e0e0e0;
+  padding: 1rem;
+}
+
+.p-datatable .p-datatable-thead > tr > th {
+  background-color: #ffffff;
+  color: #333;
+  font-weight: 600;
+  padding: 0.75rem 1rem;
+  border-width: 0 0 1px 0;
+  border-color: #e0e0e0;
+}
+
+.p-datatable .p-datatable-tbody > tr > td {
+  padding: 0.75rem 1rem;
+  border-width: 0 0 1px 0;
+  border-color: #e0e0e0;
+}
+
+/* Fix para mantener el contenido centrado en pantallas grandes */
+@media (min-width: 1367px) {
+  .main-content {
+    padding: 0;
+  }
+  
+  .main-content > * {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+}
