--- a/sigaus-tool/src/app/shared/filter/filter.component.scss
+++ b/sigaus-tool/src/app/shared/filter/filter.component.scss
@@ -27,7 +27,7 @@
     border: 1px solid #ddd;
     border-radius: 4px;
     padding: 0 10px;
-    height: 40px; // Fixed height to match dropdowns
+    height: 40px;
     
     &-icon {
       color: #999;
@@ -80,7 +80,6 @@
     border: none;
   }
   
-  // Fix dropdown height to match screenshot
   .p-dropdown {
     min-height: 40px;
     
